# research-crew

./: .gitignore  README.md  pyproject.toml  report.md  requirements.txt
knowledge/: user_preference.txt
src/building_an_ai_crew_for_prompt_research_and_implementation/: crew.py  main.py
src/building_an_ai_crew_for_prompt_research_and_implementation/config/: agents.yaml  tasks.yaml
src/research-crew-crew/: crew.py  main.py
src/research_crew_crew/: __init__.py  crew.py  main.py  requirements.txt
src/research_crew_crew/config/: tasks.yaml
