[project]
name = "building_an_ai_crew_for_prompt_research_and_implementation"
version = "0.1.0"
description = "building_an_ai_crew_for_prompt_research_and_implementation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
building_an_ai_crew_for_prompt_research_and_implementation = "building_an_ai_crew_for_prompt_research_and_implementation.main:run"
run_crew = "building_an_ai_crew_for_prompt_research_and_implementation.main:run"
train = "building_an_ai_crew_for_prompt_research_and_implementation.main:train"
replay = "building_an_ai_crew_for_prompt_research_and_implementation.main:replay"
test = "building_an_ai_crew_for_prompt_research_and_implementation.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
