[project]
name = "research-crew-crew"
version = "0.1.0"
description = "research-crew-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
research-crew-crew = "research-crew-crew.main:run"
run_crew = "research-crew-crew.main:run"
train = "research-crew-crew.main:train"
replay = "research-crew-crew.main:replay"
test = "research-crew-crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
