[project]
name = "research_crew_crew"
version = "0.1.0"
description = "research_crew_crew using crewAI"
authors = [{ name = "MacePh", email = "acircleperson@gmail.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
research_crew_crew = "research_crew_crew.main:run"
run_crew = "research_crew_crew.main:run"
train = "research_crew_crew.main:train"
replay = "research_crew_crew.main:replay"
test = "research_crew_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_crew_crew"]